--- a/Dashboard.ipynb
+++ b/Dashboard.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,8 @@
     "def wrangle_data(rawdata):\n",
     "    \"\"\" Parameters: rawdata - data from json file or API call. Returns a dataframe.\n",
     "    Edit to include the code that wrangles the data, creates the dataframe and fills it in. \"\"\"\n",
-    "    datadic=data['data'][0] # data['data'] is a list\n",
+    "    \n",
+    "    datadic=jsondata['data'][0] # data['data'] is a list\n",
     "    \n",
     "    males=datadic['Males']\n",
     "    females=datadic['Females']\n",
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,13 +183,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f4f9d9e403943dbba020ed02d6b5f59",
+       "model_id": "d96990d1be56462583ff0d06ba6224f0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -257,10 +258,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "98635a0059de4de2b3975e6fbf00035d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "SelectMultiple(description='Sex', index=(0, 1), options=('males', 'females', 'total'), rows=3, value=('males',…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "31708b45b0b744f4968b707cc2a380c5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c149b6395dc743259cd9a542d341d737",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(SelectMultiple(description='Stats:', index=(0, 1), options=('males', 'females'), rows=2, value=…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d87b52effc244c6b972aaa9f994448e3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "agecols=wdg.SelectMultiple(\n",
+    "    options=['males', 'females', 'total'], # options available\n",
+    "    value=['males', 'females'], # initial value\n",
+    "    rows=3, # rows of the selection box\n",
+    "    description='Sex',\n",
+    "    disabled=False\n",
+    ")\n",
+    "\n",
+    "def age_graph(graphcolumns):\n",
+    "    # our callback function.\n",
+    "    ncols=len(graphcolumns)\n",
+    "    if ncols>0:\n",
+    "       df.plot(kind='bar', y=list(graphcolumns)) # graphcolumns is a tuple - we need a list\n",
+    "       plt.show() # important - graphs won't update properly if this is missing\n",
+    "    else:\n",
+    "        # if the user has not selected any column, print a message instead\n",
+    "        print(\"Click to select data for graph\")\n",
+    "        print(\"(CTRL-Click to select more than one category)\")\n",
+    "    \n",
+    "# keep calling age_graph(graphcolumns=value_of_agecols); capture output in widget output    \n",
+    "output=wdg.interactive_output(age_graph, {'graphcolumns': agecols})\n",
+    "\n",
+    "display(agecols, output)\n",
+    "\n",
     "series=wdg.SelectMultiple(\n",
     "    options=['males', 'females'],\n",
     "    value=['males', 'females'],\n",
@@ -287,7 +369,7 @@
     "        logscale=True\n",
     "    ncols=len(gcols)\n",
     "    if ncols>0:\n",
-    "        data_hosp_df[list(gcols)].plot(logy=logscale)\n",
+    "        df[list(gcols)].plot(logy=logscale)\n",
     "        plt.show() # important - graphs won't update if this is missing \n",
     "    else:\n",
     "        print(\"Click to select data for graph\")\n",
@@ -295,33 +377,35 @@
     "\n",
     "# keep calling data_hosp_graph(gcols=value_of_series, gscale=value_of_scale); \n",
     "# capture output in widget graph   \n",
-    "graph=wdg.interactive_output(data_hosp_graph, {'gcols': series, 'gscale': scale})"
+    "graph=wdg.interactive_output(data_hosp_graph, {'gcols': series, 'gscale': scale})\n",
+    "\n",
+    "display(controls, graph)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(controls, graph)\n",
     "\n",
-    "def refresh_graph():\n",
-    "    \"\"\" We change the value of the widget in order to force a redraw of the graph;\n",
-    "    this is useful when the data have been updated. This is a bit of a gimmick; it\n",
-    "    needs to be customised for one of your widgets. \"\"\"\n",
-    "    current=whichwalk.value\n",
-    "    if current==whichwalk.options[0]:\n",
-    "        other=whichwalk.options[1]\n",
-    "    else:\n",
-    "        other=whichwalk.options[0]\n",
-    "    whichwalk.value=other # forces the redraw\n",
-    "    whichwalk.value=current # now we can change it back\n",
+    "\n",
+    "#def refresh_graph():\n",
+    "    #\"\"\" We change the value of the widget in order to force a redraw of the graph;\n",
+    "    #this is useful when the data have been updated. This is a bit of a gimmick; it\n",
+    "    #needs to be customised for one of your widgets. \"\"\"\n",
+    "    #current=whichwalk.value\n",
+    "    #if current==whichwalk.options[0]:\n",
+    "        #other=whichwalk.options[1]\n",
+    "    #else:\n",
+    "        #other=whichwalk.options[0]\n",
+    "   # whichwalk.value=other # forces the redraw\n",
+    "    #whichwalk.value=current # now we can change it back\n",
     "    \n",
     "    \n",
-    "graph=wdg.interactive_output(plot_random_walk, {'walk': whichwalk})\n",
+    "#graph=wdg.interactive_output(plot_random_walk, {'walk': whichwalk})\n",
     "    \n",
-    "display(whichwalk, graph)"
+    "#display(whichwalk, graph)"
    ]
   },
   {
